--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-dom": "^17.0.2",
     "react-id-generator": "^3.0.2",
     "react-lines-ellipsis": "^0.15.0",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
   },
