--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
     "express": "^4.17.2",
     "express-favicon": "^2.0.1",
     "lodash.debounce": "^4.0.8",
     "path": "^0.12.7",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-id-generator": "^3.0.2",
     "react-lines-ellipsis": "^0.15.0",
+    "react-responsive-carousel": "^3.2.22",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
