--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-id-generator": "^3.0.2",
+    "react-image-gallery": "^1.2.7",
     "react-lines-ellipsis": "^0.15.0",
     "react-responsive-carousel": "^3.2.22",
     "react-router": "^6.2.1",
