--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "react-todo",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "17.x"
+  },
   "dependencies": {
+
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/icons": "^4.11.2",
