--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "node": "17.x"
   },
   "dependencies": {
-
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/icons": "^4.11.2",
@@ -23,6 +22,7 @@
     "express": "^4.17.2",
     "express-favicon": "^2.0.1",
     "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
