--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-spring": "^9.4.1",
     "react-transition-group": "^4.4.2",
     "web-vitals": "^2.1.2"
   },
