--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": "17.x"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.8.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/icons": "^4.11.2",
@@ -18,11 +19,13 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
     "date-fns": "^2.28.0",
     "express": "^4.17.2",
     "express-favicon": "^2.0.1",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
+    "node-fetch": "^2.0.0",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
