--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
+    "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "express-favicon": "^2.0.1",
     "lodash.debounce": "^4.0.8",
@@ -43,6 +44,8 @@
   },
   "scripts": {
     "start": "node server.js",
+    "start-local": "cross-env NODE_ENV=development nodemon --inspect server.js ",
+    "stop-local": "pm2 stop server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -67,6 +70,7 @@
     ]
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "sass": "^1.45.1"
   }
 }
