--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
     "node-fetch": "^2.0.0",
+    "nodemon": "^2.0.15",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
@@ -45,7 +46,6 @@
   "scripts": {
     "start": "node server.js",
     "start-local": "cross-env NODE_ENV=development nodemon --inspect server.js ",
-    "stop-local": "pm2 stop server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
