--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
+    "@types/react": "^17.0.52",
+    "@types/react-dom": "^18.0.10",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
@@ -41,6 +45,7 @@
     "react-scripts": "5.0.0",
     "react-spring": "^9.4.1",
     "react-transition-group": "^4.4.2",
+    "typescript": "^4.9.4",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -49,7 +54,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve": "react-scripts start"
+    "serve": "react-scripts start",
+    "tsc": "tsc --noEmit"
   },
   "eslintConfig": {
     "extends": [
