add apollo client and auth queries

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GENERATE_SOURCEMAP=false
 REACT_APP_SERVER_URL=https://towatchapp.herokuapp.com/
+REACT_APP_API_URL=https://movies.artem-rachkov.ru/api/
