--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": "17.x"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.3",
     "@auth0/auth0-react": "^1.8.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
@@ -26,8 +27,11 @@
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
     "dotenv": "^11.0.0",
+    "effector": "^22.5.0",
+    "effector-react": "^22.4.0",
     "express": "^4.17.2",
     "express-favicon": "^2.0.1",
+    "graphql": "^16.6.0",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
     "node-fetch": "^2.0.0",
