--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.41.5",
     "react-id-generator": "^3.0.2",
     "react-image-gallery": "^1.2.7",
     "react-lines-ellipsis": "^0.15.0",
