--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,5 @@
     "incremental": true
   },
   "exclude": ["node_modules"],
-  "include": ["src", "next-env.d.ts", "**/*.ts", "**/*.tsx"]
+  "include": ["src/**/*", "**/*.ts", "**/*.tsx", "custom.d.ts"]
 }
