--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "graphql": "^16.6.0",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
+    "process": "^0.11.10",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
