--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-GENERATE_SOURCEMAP=false
-REACT_APP_SERVER_URL=https://towatchapp.herokuapp.com/
+GENERATE_SOURCEMAP=true
 REACT_APP_API_URL=http://localhost:3001/graphql
+REACT_APP_X_API_KEY=9261fd63-b1c8-4121-bea1-7d81ae93b210
