--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^18.11.18",
     "@types/react": "^17.0.52",
     "@types/react-dom": "^18.0.10",
+    "axios": "^1.2.2",
     "bootstrap": "^5.1.3",
     "effector": "^22.5.0",
     "effector-react": "^22.4.0",
