--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "react-todo",
-  "version": "0.1.0",
+  "name": "react-what-to-watch-app",
+  "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": "17.x"
+    "node": "16.x"
   },
   "dependencies": {
     "@apollo/client": "^3.7.3",
@@ -23,34 +23,24 @@
     "@types/react": "^17.0.52",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.2",
-    "bootstrap": "^5.1.3",
     "effector": "^22.5.0",
     "effector-react": "^22.4.0",
-    "express": "^4.17.2",
-    "express-favicon": "^2.0.1",
     "graphql": "^16.6.0",
-    "lodash.debounce": "^4.0.8",
-    "lodash.throttle": "^4.1.1",
     "process": "^0.11.10",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.41.5",
-    "react-id-generator": "^3.0.2",
-    "react-image-gallery": "^1.2.7",
-    "react-lines-ellipsis": "^0.15.0",
-    "react-responsive-carousel": "^3.2.22",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "react-spring": "^9.4.1",
-    "react-transition-group": "^4.4.2",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.2"
   },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "sass": "^1.45.1"
+  },
   "scripts": {
-    "start": "node server.js",
-    "start-local": "cross-env NODE_ENV=development nodemon --inspect server.js ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -74,9 +64,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "cross-env": "^7.0.3",
-    "sass": "^1.45.1"
   }
 }
